add font family

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <section class="position-relative min-vh-100">
+    <section class="position-relative min-vh-100 bg-danger">
         <div class="container max-w-1140 ">
             <nav class="d-flex justify-content-between align-items-center ">
                 <div class="logo">
