--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <section class="position-relative min-vh-100 bg-danger">
         <div class="container max-w-1140 ">
             <nav class="d-flex justify-content-between align-items-center ">
-                <div class="logo">
+                <div class="d-flex  align-items-center gap-12">
                     <img src="./assets/img/svg/logo.svg" alt="logo-image ">
-                    <h2></h2>
+                    <h2 class="m-0 font-Work-sans fw-normal line-height-27 fs-2xl">maître d</h2>
                 </div>
                 <div class="menulist d-flex  align-content-center align-items-center  z-2">
                     <ul class="d-flex p-0 m-0 gap-46">
-                        <li><a href="#home" class="nav-link ">Home</a></li>
-                        <li><a href="#modules" class="nav-link">Modules</a></li>
+                        <li><a href="#home" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Home</a></li>
+                        <li><a href="#modules" class="nav-link ">Modules</a></li>
                         <li><a href="#pricing" class="nav-link">Pricing</a></li>
                         <li><a href="#features" class="nav-link">Features</a></li>
                         <li><a href="#contact" class="nav-link">Contact Us</a></li>                                                
