--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 <body>
     <section class="position-relative min-vh-100 bg-danger">
         <div class="container max-w-1140 ">
-            <nav class="d-flex justify-content-between align-items-center ">
+            <nav class="d-flex justify-content-between align-items-center pt-23">
                 <div class="d-flex  align-items-center gap-12">
                     <img src="./assets/img/svg/logo.svg" alt="logo-image ">
                     <h2 class="m-0 font-Work-sans fw-normal line-height-27 fs-2xl">maître d</h2>
                 </div>
-                <div class="menulist d-flex  align-content-center align-items-center  z-2">
+                <div class="menulist d-flex  align-content-center align-items-center  z-2 gap-29">
                     <ul class="d-flex p-0 m-0 gap-46">
                         <li><a href="#home" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Home</a></li>
-                        <li><a href="#modules" class="nav-link ">Modules</a></li>
-                        <li><a href="#pricing" class="nav-link">Pricing</a></li>
-                        <li><a href="#features" class="nav-link">Features</a></li>
-                        <li><a href="#contact" class="nav-link">Contact Us</a></li>                                                
+                        <li><a href="#modules" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg ">Modules</a></li>
+                        <li><a href="#pricing" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Pricing</a></li>
+                        <li><a href="#features" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Features</a></li>
+                        <li><a href="#contact" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Contact Us</a></li>                                                
                     </ul>
-                    <button class="btn-1"></button>
+                    <span class=""><img src="./assets/img/svg/Vector.svg" alt=""></span>
                 </div>
                 <div class="hamburger cursor-pointer">
                     <span class="bar1"></span>
