add hero bg img

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 </head>
 
 <body>
-    <section class="position-relative min-vh-100 bg-danger">
+    <header class="position-relative min-vh-100 bg-hero">
         <div class="container max-w-1140 ">
             <nav class="d-flex justify-content-between align-items-center pt-23">
                 <div class="d-flex  align-items-center gap-12">
-                    <img src="./assets/img/svg/logo.svg" alt="logo-image ">
+                    <img src="./assets/images/svg/logo.svg" alt="logo-image ">
                     <h2 class="m-0 font-Work-sans fw-normal line-height-27 fs-2xl">maître d</h2>
                 </div>
-                <div class="menulist d-flex  align-content-center align-items-center  z-2 gap-29">
+                <div class="menulist d-flex  align-content-center align-items-center  z-2 gap-29 ">
                     <ul class="d-flex p-0 m-0 gap-46">
-                        <li><a href="#home" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Home</a></li>
-                        <li><a href="#modules" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg ">Modules</a></li>
-                        <li><a href="#pricing" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Pricing</a></li>
-                        <li><a href="#features" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Features</a></li>
-                        <li><a href="#contact" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg">Contact Us</a></li>                                                
+                        <li><a href="#home" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Home</a></li>
+                        <li><a href="#modules" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300 ">Modules</a></li>
+                        <li><a href="#pricing" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Pricing</a></li>
+                        <li><a href="#features" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Features</a></li>
+                        <li><a href="#contact" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Contact Us</a></li>                                                
                     </ul>
-                    <span class=""><img src="./assets/img/svg/Vector.svg" alt=""></span>
+                    <button class="border-0 bg-transparent serarch-icon "><img src="./assets/images/svg/Vector.svg" alt=""></button>
                 </div>
                 <div class="hamburger cursor-pointer">
                     <span class="bar1"></span>
@@ -41,8 +41,12 @@
                     <span class="bar3"></span>
                 </div>
             </nav>
+            <div class="d-flex justify-content-center pt-119 flex-column align-items-center">
+                <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59">Maitre D – Store Management for Barbers</h1>
+                <button class="font-Work-sans line-height-23 fw-bold fs-xl btn-1 text-white ">Submit</button>
+            </div>
         </div>
-    </section>
+    </header>
     <section class="position-relative ">
         <div class="container">
             <div class="responsive">
