--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Maitre</title>
     <link rel="shortcut icon" href="./assets/images/svg/logo.svg" type="image/x-icon">
-    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
@@ -28,13 +27,24 @@
                 </div>
                 <div class="menulist d-flex  align-content-center align-items-center  z-2 gap-29 ">
                     <ul class="d-flex p-0 m-0 gap-46">
-                        <li><a href="#home" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Home</a></li>
-                        <li><a href="#modules" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300 ">Modules</a></li>
-                        <li><a href="#pricing" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Pricing</a></li>
-                        <li><a href="#features" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Features</a></li>
-                        <li><a href="#contact" class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Contact Us</a></li>                                                
+                        <li><a href="#home"
+                                class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Home</a>
+                        </li>
+                        <li><a href="#modules"
+                                class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300 ">Modules</a>
+                        </li>
+                        <li><a href="#pricing"
+                                class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Pricing</a>
+                        </li>
+                        <li><a href="#features"
+                                class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Features</a>
+                        </li>
+                        <li><a href="#contact"
+                                class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Contact
+                                Us</a></li>
                     </ul>
-                    <button class="border-0 bg-transparent serarch-icon "><img src="./assets/images/svg/Vector.svg" alt=""></button>
+                    <button class="border-0 bg-transparent serarch-icon "><img src="./assets/images/svg/Vector.svg"
+                            alt=""></button>
                 </div>
                 <div class="hamburger cursor-pointer">
                     <span class="bar1"></span>
@@ -43,20 +53,48 @@
                 </div>
             </nav>
             <div class="d-flex justify-content-center pt-119 flex-column align-items-center">
-                <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59">Maitre D – Store Management for Barbers</h1>
+                <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59">Maitre D –
+                    Store Management for Barbers</h1>
                 <button class="font-Work-sans line-height-23 fw-bold fs-xl btn-1 text-white ">Submit</button>
             </div>
         </div>
     </header>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-6">
+                    <div class="max-w-443">
+                        <img src="./assets/images/webp/Group39634.png" alt="" class="w-100">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="d-flex gap-2 align-items-center">
+                        <h4 class="font-Work-sans line-height-18 fw-semibold fs-lg gradient-text m-0 ">About Us </h4>
+                        <span class="line"></span>
+                    </div>
+                    <h2 class="m-0 font-Work-sans fw-bold line-height-46 text-black fs-4xl pt-14">What is<span
+                            class="gradient-text"> Maître D?</span></h2>
+                    <h6 class="m-0 font-Work-sans fw-normal line-height-26  fs-lg opacity-7 pt-12">Maître D is a full
+                        service solution, designed specifically for salons and barbershops. Our approach is modular,
+                        which means you only pay for the functionality that you need. Each module is completely
+                        integrated into the solution, so your entire business always remains syncronized. Maître D
+                        allows you to see everything within your business, from one location. </h6>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <section class="position-relative ">
         <div class="container">
             <div class="responsive">
             </div>
-            <button class="pre-btn d-xl-block d-none slick-btn rounded-circle  d-flex justify-content-center align-items-center position-absolute">
-               
+            <button
+                class="pre-btn d-xl-block d-none slick-btn rounded-circle  d-flex justify-content-center align-items-center position-absolute">
+
             </button>
-            <button class="next-btn d-xl-block d-none slick-btn rounded-circle d-flex justify-content-center align-items-center position-absolute">
-            
+            <button
+                class="next-btn d-xl-block d-none slick-btn rounded-circle d-flex justify-content-center align-items-center position-absolute">
+
             </button>
         </div>
     </section>
