--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="position-relative min-vh-100 bg-hero d-none">
+    <header class="position-relative min-vh-100 bg-hero ">
         <div class="container max-w-1140 ">
             <nav class="d-flex justify-content-between align-items-center pt-23">
                 <div class="d-flex  align-items-center gap-12">
@@ -59,9 +59,13 @@
             </div>
         </div>
     </header>
-    <section class="d-none">        
+    <section class=""> 
+        <div class="h-200">
+            <img src="./assets/images/webp/Slice2.png" alt="" class="w-100">       
+
+        </div>
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center pt-20">
                 <div class="col-6">
                     <div class="max-w-443">
                         <img src="./assets/images/webp/Group39634.png" alt="" class="w-100">
@@ -84,7 +88,7 @@
             </div>
         </div>
     </section>
-    <section class="bg -2nd ">
+    <section class="bg-2nd ">
         <div class="container max-w-1140">
 
             <div class="d-flex justify-content-center flex-column align-items-center">
