--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="./assets/images/webp/Slice2.png" alt="" class="w-100">       
 
         </div>
-        <div class="container">
+        <div class="container max-w-1140">
             <div class="row align-items-center pt-20">
                 <div class="col-6">
                     <div class="max-w-443">
@@ -89,7 +89,7 @@
         </div>
     </section>
     <section class="bg-2nd ">
-        <div class="container max-w-1140">
+        <div class="container max-w-1140 pt-217">
 
             <div class="d-flex justify-content-center flex-column align-items-center">
                 <div class="d-flex gap-2 align-items-center">
