--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="position-relative min-vh-100 bg-hero ">
+    <header class="position-relative min-vh-100 bg-hero d-none">
         <div class="container max-w-1140 ">
             <nav class="d-flex justify-content-between align-items-center pt-23">
                 <div class="d-flex  align-items-center gap-12">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </header>
-    <section class="">
+    <section class="d-none">
         <div class="h-200">
             <img src="./assets/images/webp/Slice2.png" alt="" class="w-100">
 
@@ -88,7 +88,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-2nd ">
+    <section class="bg-2nd d-none">
         <div class="container max-w-1140 pt-217">
 
             <div class="d-flex justify-content-center flex-column align-items-center">
@@ -206,7 +206,7 @@
         </div>
 
     </section>
-    <section class="">
+    <section class="d-none">
         <div class="container max-w-1140">
             <div class="d-flex justify-content-center flex-column align-items-center pt-189">
                 <div class="d-flex gap-2 align-items-center">
@@ -253,6 +253,39 @@
                 </button>
             </div>
            
+        </div>
+    </section>
+    <section>
+        <div class="container max-w-1140">
+            <div class="row align-items-end">
+                <div class="col-6">
+                    <div class="max-w-525">
+                        <div class="d-flex gap-2 align-items-center">
+                            <h4 class="font-Work-sans line-height-18 fw-semibold fs-lg gradient-text m-0 ">Contact US </h4>
+                            <span class="line"></span>
+                        </div>
+                        <h3 class="m-0 font-Work-sans line-height-46 fs-4xl fw-bold pt-2">Get in touch!</h3>
+                        <form action="" class="pt-75">
+                            <div class="d-flex gap-31">
+                                <input type="text" placeholder="Full Name " class="font-Work-sans fw-normal line-height-18 fs-lg text-black input-text border-0 pb-15 w-100 max-w-269">
+                                <input type="email" placeholder="Email Address " class="font-Work-sans fw-normal line-height-18 fs-lg text-black input-text border-0 pb-15 w-100 max-w-225 ">
+                            </div>
+                            <input type="text" placeholder="Company Name" class="font-Work-sans fw-normal line-height-18 fs-lg text-black input-text border-0 pb-15 w-100 pt-29 " >
+                            <div class="pt-30 pb-15">
+                                <textarea placeholder="Message" rows="3" class="font-Work-sans fw-normal line-height-18 fs-lg text-black input-text border-0  w-100 "></textarea>
+
+                            </div>
+                         
+                            <button class="font-Work-sans line-height-23 text-white fw-bold  fs-xl btn-1 mt-25">Submit</button>
+                        </form>
+                    </div>
+
+                </div>
+                <div class="col-6">
+                    <img src="./assets/images/webp/Group39631.png" alt="" class="w-100">
+                </div>
+            </div>
+
         </div>
     </section>
 
