--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </section>
     <section>
         <div class="container max-w-1140">
-            <div class="row align-items-end">
+            <div class="row align-items-end pb-147">
                 <div class="col-6">
                     <div class="max-w-525">
                         <div class="d-flex gap-2 align-items-center">
@@ -284,10 +284,25 @@
                 <div class="col-6">
                     <img src="./assets/images/webp/Group39631.png" alt="" class="w-100">
                 </div>
-            </div>
-
+            </div>            
         </div>
     </section>
+    <footer class="bg-footer bg-white">
+        <div class="container max-w-1140 ">
+           <div class="pt-82 d-flex flex-column align-items-center">
+            <img src="./assets/images/svg/logo1.svg" alt="">
+            <h6 class="pt-15 m-0 text-white text-center max-w-375 fw-normal font-Work-sans line-height-21 fs-md">Proudly Australian developed software. Focused on increasing efficiency and growing business within the beauty industry.</h6>
+            <div class="pt-34 d-flex gap-51 pb-33">
+                <a href="" class="font-Work-sans fw-semibold text-white line-height-21 fs-md">Navigation</a>
+                <a href="" class="font-Work-sans fw-semibold text-white line-height-21 fs-md">Company</a>
+                <a href="" class="font-Work-sans fw-semibold text-white line-height-21 fs-md">Contact</a>
+            </div>
+
+           </div>
+
+        </div>
+        <h6 class="pt-15 pb-15 text-center m-0 text-white font-Work-sans fw-normal line-height-18 fs-sm opacity-7 cursor-pointer border-top">Copyright  <span id="year"></span> All rights reserved, Greenfox Development Pty Ltd©</h6>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
