Pricing section add

--- a/index.html
+++ b/index.html
@@ -326,11 +326,17 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="gradient-box">
-                        <div>
-                            <div class="bg-white rounded-circle diamond-box">
-
+                    <div class="gradient-box d-flex justify-content-between align-items-center">
+                        <div class="d-flex flex-column">
+                            <div class="bg-white rounded-circle diamond-box d-flex align-items-center justify-content-center">
+                                <img src="./assets/images/svg/diamond.svg" alt="">
                             </div>
+                            <h5 class="text-white font-Work-sans m-0  pt-11 line-height-23 fw-semibold fs-xl">Platinum</h5>
+                        </div>
+                        <div class="d-flex h-56 position-relative">
+                            <img src="./assets/images/svg/Ellipse446.svg" alt="" class="position-absolute Ellipse446">
+                            <h5 class="text-white m-0 font-Work-sans line-height-56 fs-5xl z-1">$449</h5>
+                            <sup class="font-Work-sans text-white line-height-16  fs-md fw-medium z-1">/Month</sup>
                         </div>
                         
 
