add footer link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="position-relative min-vh-100 bg-hero ">
         <div class="container max-w-1140 ">
-            <nav class="d-flex justify-content-between align-items-center pt-23">
+            <nav class="d-flex justify-content-between align-items-center pt-23" id="navigation">
                 <div class="d-flex  align-items-center gap-12">
                     <img src="./assets/images/svg/logo.svg" alt="logo-image ">
                     <h2 class="m-0 font-Work-sans fw-normal line-height-27 fs-2xl">maître d</h2>
@@ -43,7 +43,11 @@
                                 class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Contact
                                 Us</a></li>
                     </ul>
-                    <button class="border-0 bg-transparent serarch-icon "><img src="./assets/images/svg/Vector.svg"
+                    <!-- <input type="text" class="search-click" name="" placeholder="search here..." /> -->
+                    <div>
+
+                    </div>
+                    <button class="border-0 bg-transparent serarch-icon  "><img src="./assets/images/svg/Vector.svg"
                             alt=""></button>
                 </div>
                 <div class="hamburger cursor-pointer">
@@ -351,10 +355,10 @@
 
         </div>
     </section>
-    <section>
+    <section >
         <div class="container max-w-1140">
             <div class="row align-items-end pb-147 pt-295">
-                <div class="col-6">
+                <div class="col-6" id="contact">
                     <div class="max-w-525">
                         <div class="d-flex gap-2 align-items-center">
                             <h4 class="font-Work-sans line-height-18 fw-semibold fs-lg gradient-text m-0 ">Contact US
@@ -397,11 +401,11 @@
                     Proudly Australian developed software. Focused on increasing efficiency and growing business within
                     the beauty industry.</h6>
                 <div class="pt-34 d-flex gap-51 pb-33">
-                    <a href=""
+                    <a href="#navigation"
                         class="font-Work-sans fw-semibold text-white line-height-21 fs-md underline position-relative">Navigation</a>
                     <a href=""
                         class="font-Work-sans fw-semibold text-white line-height-21 fs-md underline position-relative">Company</a>
-                    <a href=""
+                    <a href="#contact"
                         class="font-Work-sans fw-semibold text-white line-height-21 fs-md underline position-relative">Contact</a>
                 </div>
 
