add navbar link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <span class="bar3"></span>
                 </div>
             </nav>
-            <div class="d-flex justify-content-center pt-119 flex-column align-items-center">
+            <div class="d-flex justify-content-center pt-119 flex-column align-items-center" id="home">
                 <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59">Maitre D –
                     Store Management for Barbers</h1>
                 <button class="font-Work-sans line-height-23 fw-bold fs-xl btn-1 text-white ">Submit</button>
@@ -92,7 +92,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-2nd ">
+    <section class="bg-2nd " id="features">
         <div class="container max-w-1140 pt-217">
 
             <div class="d-flex justify-content-center flex-column align-items-center">
@@ -210,7 +210,7 @@
         </div>
 
     </section>
-    <section class="">
+    <section class="" id="modules">
         <div class="container max-w-1140">
             <div class="d-flex justify-content-center flex-column align-items-center pt-189">
                 <div class="d-flex gap-2 align-items-center">
@@ -261,7 +261,7 @@
 
         </div>
     </section>
-    <section>
+    <section id="pricing">
         <div class="container max-w-1140">
             <div class="d-flex justify-content-center flex-column align-items-center pt-189">
                 <div class="d-flex gap-2 align-items-center">
