--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="position-absolute sun">
             <img src="./assets/images/svg/sun.svg" alt="" class="">
         </div>
+        
         <div class="container max-w-1140 ">
             <nav class="d-flex justify-content-between align-items-center pt-23" id="navigation">
                 <div class="d-flex  align-items-center gap-12">
@@ -61,7 +62,7 @@
             </nav>
             <div class="d-flex justify-content-center pt-sm-119 pt-60 flex-column align-items-center" id="home">
                 <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59">Maitre D –
-                    Store Management for Barbers</h1>
+                    Store <span class="vector1 position-relative">Management</span> for Barbers</h1>
                 <button class="font-Work-sans line-height-23 fw-bold fs-xl btn-1 text-white ">Submit</button>
             </div>
         </div>
