--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <span class="bar3"></span>
                 </div>
             </nav>
-            <div class="d-flex justify-content-center pt-sm-119 pt-60 flex-column align-items-center" id="home">
-                <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59">Maitre D –
+            <div class="d-flex justify-content-center pt-sm-119 pt-60 flex-column align-items-center " id="home">
+                <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59 ">Maitre D –
                     Store <span class="vector1 position-relative">Management</span> for Barbers</h1>
                 <button class="font-Work-sans line-height-23 fw-bold fs-xl btn-1 text-white ">Submit</button>
             </div>
@@ -73,13 +73,13 @@
 
         </div>
         <div class="container max-w-1140">
-            <div class="row align-items-center pt-20 pb-lg-109 pb-sm-60 pb-5 flex-column-reverse">
-                <div class="col-lg-6 pt-lg-5 pt-4">
+            <div class="row align-items-center pt-20 pb-lg-109 pb-sm-60 pb-5 flex-wrap-reverse">
+                <div class="col-lg-6 col-12 pt-4">
                     <div class="max-w-lg-443">
                         <img src="./assets/images/webp/Group39634.png" alt="Ellipse" class="w-100">
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-12">
                     <div class="d-flex gap-2 align-items-center">
                         <h4 class="font-Work-sans line-height-18 fw-semibold fs-lg gradient-text m-0 ">About Us </h4>
                         <span class="line"></span>
