--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="position-relative min-vh-100 bg-hero d-none">
+    <header class="position-relative min-vh-100 bg-hero">
         <div class="position-absolute sun ">
             <img src="./assets/images/svg/sun.svg" alt="" class="">
         </div>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </header>
-    <section class="d-none" id="company">
+    <section class="" id="company">
         <div class="h-lg-200">
             <img src="./assets/images/webp/Slice2.png" alt="slice-img" class="w-100">
 
@@ -96,7 +96,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-2nd d-none" id="features">
+    <section class="bg-2nd " id="features">
         <div class="container max-w-1140 ">
 
             <div class="d-flex justify-content-center flex-column align-items-center pt-lg-108 pt-sm-60 pt-5">
@@ -350,7 +350,7 @@
     </section>
     <!-- --------slider -->
 
-    <section id="pricing " class="d-none">
+    <section id="pricing " class="">
         <div class="container max-w-1140">
             <div class="d-flex justify-content-center flex-column align-items-center  pt-lg-94 pt-sm-60 pt-5">
                 <div class="d-flex gap-2 align-items-center">
@@ -446,7 +446,7 @@
 
         </div>
     </section>
-    <section  class="d-none">
+    <section  class="">
         <div class="container max-w-1140">
             <div class="row align-items-end pb-lg-147  pt-sm-60 pb-sm-60 pt-5 pb-5    pt-lg-147 flex-wrap-reverse" id="contacts">
                 <div class="col-lg-6 col-12 pt-sm-5 pt-4" id="contact" >
@@ -485,7 +485,7 @@
         </div>
     </section>
 
-    <footer class="bg-footer bg-white d-none ">
+    <footer class="bg-footer bg-white  ">
         <div class="container max-w-1140 ">
             <div class="pt-82 d-flex flex-column align-items-center">
                 <img src="./assets/images/svg/logo1.svg" alt="footer-logo">
@@ -504,6 +504,7 @@
             </div>
 
         </div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <h6
             class="pt-15 pb-15 text-center m-0 text-white font-Work-sans fw-normal line-height-18 fs-sm opacity-7 cursor-pointer border-top">
             Copyright <span id="year"></span> All rights reserved, Greenfox Development Pty Ltd©</h6>
