--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 </head>
 
 <body>
+    <div class="loading-overlay " id="loadingOverlay">
+        <div class="d-flex loader flex-column justify-content-center align-items-center">
+            <img src="./assets/images/svg/logo.svg" alt="image" class="w-25  z-1">
+            <h1 data-text="loading…" class="loader-text position-relative fs-6xl">loading…</h1>
+
+        </div>
+
+    </div>
     <header class="position-relative min-vh-100 bg-hero">
         <div class="position-absolute sun ">
             <img src="./assets/images/svg/sun.svg" alt="" class="">
