change img to webp

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </nav>
             <div class="d-flex justify-content-center pt-sm-119 pt-60 flex-column align-items-center " id="home">
-                <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-59 z-1">Maitre D
+                <h1 class="m-0 font-Work-sans  max-w-750 text-center line-height-71 fs-6xl fw-bolder pb-sm-59 z-1 pb-4">Maitre D
                     –
                     Store <span class="vector1 position-relative">Management</span> for Barbers</h1>
                 <button class="font-Work-sans line-height-23 fw-bold fs-xl btn-1 text-white ">Submit</button>
@@ -75,14 +75,14 @@
     </header>
     <section class="" id="company">
         <div class="h-lg-200">
-            <img src="./assets/images/webp/Slice2.png" alt="slice-img" class="w-100">
+            <img src="./assets/images/webp/Slice2.webp" alt="slice-img" class="w-100">
 
         </div>
         <div class="container max-w-1140">
             <div class="row align-items-center pt-20 pb-lg-109 pb-sm-60 pb-5 flex-wrap-reverse">
                 <div class="col-lg-6 col-12 pt-4">
                     <div class="max-w-lg-443">
-                        <img src="./assets/images/webp/Group39634.png" alt="Ellipse" class="w-100">
+                        <img src="./assets/images/webp/Group39634.webp" alt="Ellipse" class="w-100">
                     </div>
                 </div>
                 <div class="col-lg-6 col-12">
@@ -133,9 +133,9 @@
                                 Allow Clients to sign up for services quickly and effortlessly</h6>
                             <div class="position-absolute card-Ellipse">
                                 <div class="position-relative">
-                                    <img src="./assets/images/webp/Ellipse16.png" alt="Ellipse"
+                                    <img src="./assets/images/webp/Ellipse16.webp" alt="Ellipse"
                                         class="position-absolute Ellipse16">
-                                    <img src="./assets/images/webp/Ellipse15.png" alt="Ellipse"
+                                    <img src="./assets/images/webp/Ellipse15.webp" alt="Ellipse"
                                         class="position-absolute Ellipse15">
                                 </div>
                             </div>
@@ -169,9 +169,9 @@
                                 See everything inside your business in real time.</h6>
                             <div class="position-absolute card-Ellipse">
                                 <div class="position-relative">
-                                    <img src="./assets/images/webp/Ellipse16.png" alt="Ellipse"
+                                    <img src="./assets/images/webp/Ellipse16.webp" alt="Ellipse"
                                         class="position-absolute Ellipse16">
-                                    <img src="./assets/images/webp/Ellipse15.png" alt="Ellipse"
+                                    <img src="./assets/images/webp/Ellipse15.webp" alt="Ellipse"
                                         class="position-absolute Ellipse15">
                                 </div>
                             </div>
@@ -202,9 +202,9 @@
                                 Maitre D is provided at an an amazing, no-contract price.</h6>
                             <div class="position-absolute card-Ellipse">
                                 <div class="position-relative">
-                                    <img src="./assets/images/webp/Ellipse16.png" alt="Ellipse"
+                                    <img src="./assets/images/webp/Ellipse16.webp" alt="Ellipse"
                                         class="position-absolute Ellipse16">
-                                    <img src="./assets/images/webp/Ellipse15.png" alt="Ellipse"
+                                    <img src="./assets/images/webp/Ellipse15.webp" alt="Ellipse"
                                         class="position-absolute Ellipse15">
                                 </div>
                             </div>
@@ -241,7 +241,7 @@
                                 <div class="row">
                                     <div class="col-md-6 col-12">
                                         <div class=" pt-17">
-                                            <img src="./assets/images/webp/slider1.png" alt="slider-img" class="w-100">
+                                            <img src="./assets/images/webp/slider1.webp" alt="slider-img" class="w-100">
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-12">
@@ -277,7 +277,7 @@
                                 <div class="row">
                                     <div class="col-md-6 col-12">
                                         <div class=" pt-17">
-                                            <img src="./assets/images/webp/slider1.png" alt="slider-img" class="w-100">
+                                            <img src="./assets/images/webp/slider1.webp" alt="slider-img" class="w-100">
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-12">
@@ -313,7 +313,7 @@
                                 <div class="row">
                                     <div class="col-md-6 col-12">
                                         <div class=" pt-17">
-                                            <img src="./assets/images/webp/slider1.png" alt="slider-img" class="w-100">
+                                            <img src="./assets/images/webp/slider1.webp" alt="slider-img" class="w-100">
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-12">
@@ -523,7 +523,7 @@
 
                 </div>
                 <div class="col-lg-6 col-12">
-                    <img src="./assets/images/webp/Group39631.png" alt="group" class="w-100">
+                    <img src="./assets/images/webp/Group39631.webp" alt="group" class="w-100">
                 </div>
             </div>
         </div>
