--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 class="nav-link font-Work-sans fw-normal line-height-18 fs-lg duration-300">Contact
                                 Us</a></li>
                     </ul>
-                    <span class="search-icon cursor-pointer"><img src="./assets/images/svg/Vector.svg" alt=""></span>
+                    <span class="search-icon cursor-pointer"><img src="./assets/images/svg/Vector.svg" alt="icon"></span>
 
 
                 </div>
