--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         <div class="container max-w-1140">
             <div class="row align-items-end pb-lg-147  pt-sm-60 pb-sm-60 pt-5 pb-5    pt-lg-147 flex-wrap-reverse"
                 id="contacts">
-                <div class="col-lg-6 col-12 pt-sm-5 pt-4" id="contact">
+                <div class="col-lg-6 col-12 pt-sm-5 pt-4" >
                     <div class="max-w-lg-525">
                         <div class="d-flex gap-2 align-items-center">
                             <h4 class="font-Work-sans line-height-18 fw-semibold fs-lg gradient-text m-0 ">Contact US
@@ -513,7 +513,7 @@
                             <span class="line"></span>
                         </div>
                         <h3 class="m-0 font-Work-sans line-height-46 fs-4xl fw-bold pt-2">Get in touch!</h3>
-                        <form class="pt-75">
+                        <form class="pt-75" id="contact">
                             <div class="d-flex gap-31">
                                 <input type="text" placeholder="Full Name "
                                     class="font-Work-sans fw-normal line-height-18 fs-lg text-black input-text border-0 pb-15 w-100 max-w-lg-269">
