--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
             <div class="mx-auto max-w-971">
                 <div class="row  pt-lg-121 pt-sm-60 pt-5   pb-43">
                     <div class="col-lg-4 col-sm-6 col-12">
-                        <div
-                            class="mycard d-flex flex-column  justify-content-center align-items-center duration-300 position-relative mx-auto">
+                        <div class="mycard d-flex flex-column  justify-content-center align-items-center duration-300 position-relative mx-auto">
                             <div
                                 class="card-icon rounded-circle d-flex justify-content-center align-items-center duration-300">
                                 <svg width="61" height="55" viewBox="0 0 61 55" fill="none"
@@ -156,7 +155,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 col-12 pt-sm-0 pt-5">
+                    <div class="col-lg-4 col-sm-6 col-12 pt-sm-0 pt-4">
                         <div
                             class="mycard d-flex flex-column  justify-content-center align-items-center duration-300 position-relative mx-auto">
                             <div
@@ -192,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 col-12 pt-lg-0 pt-5">
+                    <div class="col-lg-4 col-sm-6 col-12 pt-lg-0 pt-4">
                         <div
                             class="mycard d-flex flex-column  justify-content-center align-items-center duration-300 position-relative mx-auto">
                             <div
